# zephyr-zenoh-pico-rpc

./: .gitignore  AGENTS.md  LICENSE  README.md  build.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
apps/zenoh_rpc/: CMakeLists.txt  log_wrapper.h  main.cpp  prj.conf  service.options  service.proto  service_impl.cpp  service_impl.h  zenoh_generic_config.h
apps/zenoh_rpc/boards/: rpi_pico2_rp2350a_m33_w.overlay
apps/zenoh_rpc/rpc/: service.pb.c  service.pb.h  service_server.cpp  service_server.h  zenoh_pubsub.cpp  zenoh_pubsub.h  zenoh_rpc_channel.cpp  zenoh_rpc_channel.h
apps/zenoh_rpc/wifi/: wifi_manager.cpp  wifi_manager.h
generator/: gen_client_python.py  gen_nicegui.py  gen_server_nanopb.py  util.py
manifest/: west.yml
tools/: __init__.py  example_client.py  gui.py  start_router.py
tools/rpc/: __init__.py  service_client.py  service_gui.py  service_pb2.py  service_pb2.pyi  zenoh_rpc_client.py
